Thu Apr 21 08:16:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_macosx.GNU:
        * include/makeinclude/platform_macosx_common.GNU:
          Cleanup

        * include/makeinclude/platform_macosx_lion.GNU:
          Fixed comment

Wed Apr 20 11:29:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/gnuace.features:
          Don't set ndds default to 1, reduced size of release and makes it
          possible to support more dds vendors

Wed Apr 20 10:27:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * etc/index.html:
          Make x.0.2 available

        * html/Stats/index.shtml:
          Removed cell xampler

Wed Apr 20 08:53:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Gen_Perf.cpp:
          Fixed coverity errors

        * bin/fuzz.pl:
          Extended fuzz

        * bin/generate_rel_manpages:
          Removed obsolete make steps

        * docs/bczar/bczar.html:
          zip should also be available

        * tests/Env_Value_Test.cpp:
        * tests/Reactor_Fairness_Test.cpp:
          Layout changes

Wed Apr 20 09:52:52 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.2 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: